Ajout d'un paragraphe dans le fichier index

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Bienvenue sur mon projet Git</h1>
+    <p>Modification du fichier html</p>
     <p>Ceci est un texte de démonstration pour le fichier index.html.</p>
     <script src="script.js"></script>
 </body>
